--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
                 Feito por Matheus de Vargas (1&ordm;Info 2024) <br>
                 Instituto Federal de Educação, Ciência e Tecnologia do Rio Grande do Sul - Campus <br> Erechim 04/2024
             </p>
-            <h2>Introdução</h2>
+            <h2 class="intro">Introdução</h2>
             <img src="imagens/imagemIndex.jpg" alt="" width="500">
-            <p class="intro">
-                Bem-vindo ao meu portfólio de matemática, onde apresento uma coleção abrangente   dos meus estudos durante o primeiro trimestre de 2024. Neste trimestre, estudei o  mundo dos sistemas de numeração binário, octal e hexadecimal, explorando suas aplicações.
-                O estudo dos sistemas de numeração é fundamental não apenas para a matemática teórica, mas também especialmente no campo da computação e tecnologia. No primeiro trimestre, desenvolvi um entendimento sólido desses sistemas, aprendendo a converter entre eles, compreender suas bases e aplicar esses conhecimentos em problemas práticos e teóricos.
+            <p class="introp">
+                Seja bem-vindo(a) ao meu portfólio de matemática do primeiro trimestre de 2024. Nesse portfólio eu apresento todos os conteúdos que foram estudados nesses 3 meses, e também, minhas dificuldades quanto à eles. Para mim, o portfólio é uma ótima forma de avaliação, ele incentiva nós alunos a irmos atrás do conteúdo fora da sala de aula além de não causar aquele nervosismo e ansiedade que uma prova causa. Construir esse portfólio foi um ótimo passatempo, tanto para me aprofundar nas aulas de matemática quanto para testar meus conhecimentos de desenvolvimento web.
             </p>
+            <h2 class="temas">Temas abordados</h2>
+            <img src="imagens/imagemIndex2.png" alt="" width="400" align="right">
+            <p class="temasp">
+                Nesse portfólio serão abordados os conteúdos: <br>
+                &#128995; Sistemas de Numeração (Binário, Octal e Hexadecimal); <br>
+                &#128995; Conversão entre Sistemas de Numeração; <br>
+                &#128995; Conjuntos numéricos. <br> <br>
+                Todas as páginas podem ser acessadas clicando nos 3 riscos no canto supertior esquerdo da tela. A página 1&ordm; trimestre redireciona aos links de outras páginas onde os conteúdos podem ser acessados.
+            </p>
+            
         </code>
     </body>
 </html>
