--- a/pritrimestre.html
+++ b/pritrimestre.html
@@ -24,6 +24,7 @@
             <script src="script.js"></script>
 
             <h1>Conteúdos do Primeiro Trimestre</h1>
+            <hr>
             <ul class="conteudos">
                 <il>Sistemas de Numeração</il>
                 <ol type="I" class="links">
@@ -31,7 +32,12 @@
                     <li><a href="octais.html">Octal</a></li>
                     <li><a href="hexadecimais.html">Hexadecimal</a></li>
                 </ol>
+                <il>Conjuntos Numéricos</il>
+                <ol class="conteudos" type="I">
+                    <li><a href="">Os conjuntos de Numéricos</a></li>
+                </ol>
             </ul>
+
         </code>
     </body>
 </html>
