--- a/binarios.html
+++ b/binarios.html
@@ -9,6 +9,7 @@
 </head>
     <body link="#FFFFFF" vlink="#FFFFFF">
         <code>
+
             <div class="navbar">
                 <div class="hamburger-menu">
                     <div class="line"></div>
@@ -22,6 +23,7 @@
                     <li><a href="#">3º Trimestre</a></li>
                 </ul>
             </div>
+
             <h1>Os Binários</h1> <hr> <br>
             <h2>O que é o sistema de numeração Binário?</h2>
             <p>
@@ -39,7 +41,6 @@
                 <ol type="I">
                     <li>Pegamos o número em decimal e o dividimos por 2</li>
                     <li>Guardamos o seu resto</li>
-                    <li>Pegamos o quociente e dividimos novamente por 2</li>
                     <li>Repetimos até que o quociente seja menor ou igual a 2</li>
                     <li>Pegamos o último quociente e todos os restos, <strong>da diteita para a esquerda</strong></li>
                 </ol>
@@ -47,30 +48,38 @@
                     <img src="imagens/deciparabin.png" alt="Conversão Decimal para binario">
                 </div>
             <h2 align="middle">Conversão Binário para Decimal</h2>
-                <p>Para a conversão de binário para decimal, fazemos a <strong>potenciação</strong> sempre com a base 2, comecando da direita para esquerda, e multiplicando pelo seu algarismo.
-                <ol type="I">
-                    <li>Analizamos os números</li>
-                    <li>Fazemos suas potências</li>
-                    <li>Multiplicamos pelo seu algarismo</li>
-                    <li>Somamos os resultados</li>
-                </ol>
-                <div class="centralizar">
-                    <img src="imagens/binparadec.png" alt="">
-                </div>
-            <h2 align="middle">Operações Básicas com os Binários</h2>
-            <h3>Adição:</h3>
-                <p>Por mais difícil que seja entender os binarios, eles não passam de uma versão simplificada do nosso sistema decimal, ou seja, eles também possuem operações que podem ser feitas (Adição, subtração, multiplicação e divisão). Podemos resolvelas de 2 jeitos: <strong>transformando-os em decimais</strong> ou <strong>entendendo algumas regras do sistema binário.</strong>
-                As somas são bem faceis, caso seja 1 + 0 ou 0 + 1, apenas descemos o 1. Já quando temos 1 + 1 <strong>devemos descer o 0 e colocar o 1 na próxima casa</strong>, não se assuste, é a mesma coisa que somar os decimais. Veja a tabela:</p>
-                <div class="centralizar">
-                    <img align="right" src="imagens/somabintabela.png" alt="Soma de binários">
-                </div>
-                <p>A cada +1 que o número tiver, basta olhar a sua sequencia na tabela da <a href="#progressão">progressão dos binários</a></p>
-                <p>Veja o exemplo:</p>
-                <div class="centralizar">
-                    <img src="imagens/somabin.png" alt="Soma de binários exemplo"> <br>
-                </div>
-            <h3>Subtração:</h3>
-                <p></p>
+            <p>Para a conversão de binário para decimal, fazemos a <strong>potenciação</strong> sempre com a base 2, comecando da direita para esquerda, e multiplicando pelo seu algarismo.
+            <ol type="I">
+                <li>Analizamos os números</li>
+                <li>Fazemos suas potências</li>
+                <li>Multiplicamos pelo seu algarismo</li>
+                <li>Somamos os resultados</li>
+            </ol>
+            <div class="centralizar">
+                <img src="imagens/binparadec.png" alt="">
+            </div>
+            <p class="centralizar">Imagem inspirada no material do professor Alexandro Adário</p>
+            <hr>
+            <h1>Operações Básicas com os Binários</h1>
+            <p>
+                Os binarios, não passam de uma versão simplificada do nosso sistema decimal, ou seja, eles também possuem operações que podem ser feitas (Adição, subtração, multiplicação e divisão). Podemos resolvê-las de 2 jeitos: <strong>transformando-os em decimais</strong> ou <strong>entendendo algumas regras do sistema binário.</strong>
+            </p>
+            <h2>Adição</h2>
+            <p>
+                As somas são bem faceis, caso seja 1 + 0 ou 0 + 1, apenas descemos o 1. Já quando temos 1 + 1 <strong>devemos descer o 0 e colocar o 1 na próxima casa</strong>. Veja a tabela:
+            </p>
+            <div class="centralizar">
+                <img align="right" src="imagens/somabintabela.png" alt="Soma de binários">
+            </div>
+            <p>A cada +1 que o número somar, basta olhar a sua sequencia na tabela da <a href="#progressão">progressão dos binários</a></p>
+            <p>Veja o exemplo:</p>
+            <div class="centralizar">
+                <img src="imagens/somabin.png" alt="Soma de binários exemplo"> <br>
+            </div> <br>
+            <h2>Subtração</h2>
+            <p>
+                A subtração de números binários segue a mesma lógica dos decimais. Caso 
+            </p>
             <script src="script.js"></script>
         </code>
     </body>
