--- a/hexadecimais.html
+++ b/hexadecimais.html
@@ -25,7 +25,7 @@
             <h1>Os Hexadecimais</h1>
             <hr>
             <p>
-                O sistema hexadecimal é o conjunto de 16 símbolos, da pra acreditar? 16 símbolos! mas se acalme, ele também não é tão difícil assim. O conjunto hexadecimal é composto por &#123;0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E e F&#125;. Parece difícil, mas é só se lembrar de um baralho, não existe apenas 10 simbolos no baralho, são usados também as cartas J, Q e K, a mesma coisa acontece com os hexadecimais. Os números até o 9 nós já conhecemos muito bem e as letras apenas representam a continuação deles, ou seja, A equivale a 10, B equivale a 11 e assim por diante.
+                O sistema hexadecimal é o conjunto de 16 símbolos, da pra acreditar? 16 símbolos! Mas se acalme, ele também não é tão difícil assim. O conjunto hexadecimal é composto por &#123;0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E e F&#125;. Parece difícil, mas é só se lembrar de um baralho, não existe apenas 10 simbolos no baralho, são usados também as cartas J, Q e K, a mesma coisa acontece com os hexadecimais. Os números até o 9 nós já conhecemos muito bem e as letras apenas representam a continuação deles, ou seja, A equivale a 10, B equivale a 11 e assim por diante.
             </p>
             <h2>Progressão dos Hexadecimais</h2>
                 <p>Assim que acabam-se as as letras, juntamos o simbolo 1 mais <strong>todos ou simbolos novamente</strong>, igual fizemos em todos os outros sistemas. Veja a tabela:</p>
@@ -40,7 +40,7 @@
                     <li>Quando os restos forem de 10 até 15 devemos <strong>substituir</strong> pelo seu representante no hexadecimal <strong>(as letras)</strong></li>
                     <li><font color="red">Lembre-se: sempre pegamos os restos da direita para esqueda</font></li>
                 </ol>
-                <img src="imagens/decparahex.png" alt="">
+                <img src="imagens/decparahex.png" alt="" class="centralizar">
             <h2>Conversão Hexadecimal para Decimal</h2>
                 <p>Assim como os outros sistemas, basta <strong>multiplicar o algarísmo hexadecimal pela potência de base 16 elevado a sua posição</strong>.</p>
                 <ol type="I">
@@ -49,10 +49,13 @@
                     <li>Somamos os resultados</li>
                     <li><font color="red">Lembre-se: Os algarismos reprresentados por letras no hexadecimal tem uma representação em decimal cheque a tabela.</font></li>
                 </ol>
-                <img src="imagens/hexparadec.png" alt="">
+                <img src="imagens/hexparadec.png" alt="" class="centralizar">
             <h2>Conversão Hexadecimal para Binário e Binário para Hexadecimal</h2>
             <p>Novamente os binários nos ajudando com a conversão. Essa conversão é quase igual a  Octal para Binário, porém, usamos 4 dígitos, e claro, usamos outra tabela equivalência. Veja a tabela:</p>
             <img src="imagens/tabequihex.png" alt="">
+            <p align="right" >
+                Tabela feita pela professora Valéria
+            </p>
             <p>Agora é simples, basta <strong>separar o número binário de 4 em 4 ou escrever a equivalência de cada dígito hexadecimal</strong> para fazer a conversão, veja os exemplos:</p>
             <img src="imagens/binparahex.png" alt="">
             <img src="imagens/hexparabin.png" alt="">
