--- a/pritrimestre.html
+++ b/pritrimestre.html
@@ -31,13 +31,16 @@
                     <li><a href="binarios.html" >Binário</a></li>
                     <li><a href="octais.html">Octal</a></li>
                     <li><a href="hexadecimais.html">Hexadecimal</a></li>
-                </ol>
+                </ol> <br>
                 <il>Conjuntos Numéricos</il>
                 <ol class="conteudos" type="I">
-                    <li><a href="">Os conjuntos de Numéricos</a></li>
+                    <li><a href="conjuntos.html">Os conjuntos de Numéricos</a></li>
+                </ol> <br>
+                <il>Autoavaliação</il>
+                <ol type="I">
+                    <li><a href="autoaval.html">Autoavaliação</a></li>
                 </ol>
             </ul>
-
         </code>
     </body>
 </html>
