--- a/octais.html
+++ b/octais.html
@@ -43,7 +43,7 @@
                     <img src="imagens/convdecoct.png" alt="">
                 </div>
             <h2>Conversão Octal para Decimal</h2>
-                <p>Aqui as coisas começam a ficar difíceis, mas não se preocupe, apenas com algumas noções básicas de potenciação e multiplicação já somos capazes de resolver. Assim somo nos binários, <strong>vamos pegar o número e multiplica-lo pela potencia elevada a sua posição</strong> (potencia de base 8 sempre).</p>
+                <p>Aqui as coisas começam a ficar um pouco difíceis. Assim somo nos binários, <strong>vamos pegar o número e multiplica-lo pela potencia elevada a sua posição</strong> (potencia de base 8 no caso dos octais).</p>
                 <ol type="I">
                     <li>Faça a potência com a base oito e eleve-a a sua posição</li>
                     <li>Resolva essa potência e multiplique pelo algarísmo que estava no decimal</li>
@@ -62,6 +62,7 @@
             <div class="centralizar">
                 <img src="imagens/tabelaequivalenciaoct.png" alt="Tabela ded equivalência dos Octais">
             </div>
+            <p class="centralizar">Tabela feita pela professora Valéria</p>
                 <script src="script.js"></script>
         </code>
     </body>
