--- a/index.html
+++ b/index.html
@@ -25,26 +25,32 @@
                 </ul>
             </div>
             <script src="script.js"></script>
+
             <h1>Portfólio de Matemática</h1>
-            <hr color=white>
+            <hr> <br>
             <p align="middle">
                 Feito por Matheus de Vargas (1&ordm;Info 2024) <br>
                 Instituto Federal de Educação, Ciência e Tecnologia do Rio Grande do Sul - Campus <br> Erechim 04/2024
             </p>
             <h2 class="intro">Introdução</h2>
-            <img src="imagens/imagemIndex.jpg" alt="" width="500">
+            
             <p class="introp">
                 Seja bem-vindo(a) ao meu portfólio de matemática do primeiro trimestre de 2024. Nesse portfólio eu apresento todos os conteúdos que foram estudados nesses 3 meses, e também, minhas dificuldades quanto à eles. Para mim, o portfólio é uma ótima forma de avaliação, ele incentiva nós alunos a irmos atrás do conteúdo fora da sala de aula além de não causar aquele nervosismo e ansiedade que uma prova causa. Construir esse portfólio foi um ótimo passatempo, tanto para me aprofundar nas aulas de matemática quanto para testar meus conhecimentos de desenvolvimento web.
             </p>
+            <img src="imagens/imagemIndex.jpg" alt="" width="500">
+            <p>Fonte: <a href="https://www.youtube.com/watch?v=4xDzrJKXOOY" target="_blank">Synthwave Lo-Fi Radio</a></p>
+
             <h2 class="temas">Temas abordados</h2>
-            <img src="imagens/imagemIndex2.png" alt="" width="400" align="right">
+            <img align="right" src="imagens/imagemIndex2.png" alt="" width="400">
             <p class="temasp">
                 Nesse portfólio serão abordados os conteúdos: <br>
                 &#128995; Sistemas de Numeração (Binário, Octal e Hexadecimal); <br>
                 &#128995; Conversão entre Sistemas de Numeração; <br>
                 &#128995; Conjuntos numéricos. <br> <br>
-                Todas as páginas podem ser acessadas clicando nos 3 riscos no canto supertior esquerdo da tela. A página 1&ordm; trimestre redireciona aos links de outras páginas onde os conteúdos podem ser acessados. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ad consequatur excepturi quibusdam tempore, laborum molestias earum explicabo? Delectus, accusantium sit error ex suscipit maxime vitae explicabo qui ipsum! Sequi!
-            </p>
+                Todas as páginas podem ser acessadas clicando nos 3 riscos no canto supertior esquerdo da tela. A página 1&ordm; trimestre redireciona aos links de outras páginas onde os conteúdos podem ser acessados. Cada conteúdo recebe uma página exclusiva dentro de uma lista. A página "Autoavaliação" contém uma reflexão sobre os conteúdos junto com algumas referências que achei importante citar.
+            </p> 
+
+            <p align="right">Fonte <a href="https://pixlr.com/br/image-generator/" target="_blank">Pixrl - AI Image Generator</a></p>
         </code>
     </body>
 </html>
