--- a/pritrimestre.html
+++ b/pritrimestre.html
@@ -35,6 +35,7 @@
                 <il>Conjuntos Numéricos</il>
                 <ol class="conteudos" type="I">
                     <li><a href="conjuntos.html">Os conjuntos de Numéricos</a></li>
+                    <li><a href="intervalos.html">Intervalos Reais</a></li>
                 </ol> <br>
                 <il>Autoavaliação</il>
                 <ol type="I">
